# SamNetChat

./: LICENSE  README.md
NetChatClient/: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  netchatclient.cpp  netchatclient.h  netchatview.cpp  netchatview.h  netchatview.ui  protocol.h  registerview.cpp  registerview.h  registerview.ui
NetChatServer/: CMakeLists.txt  heartbeatworker.cpp  heartbeatworker.h  main.cpp  netchatmanager.cpp  netchatmanager.h  netchatserver.cpp  netchatserver.h  netchatview.cpp  netchatview.h  netchatview.ui  protocol.h
